finalizando conexão de login e cadastro com o banco de dados e iniciando tela de charadas

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -15,7 +15,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" />
 </head>
 
-<body onload="listar()">
+<body>
   <div class="carregamento" id="carregamento"><img src="./assets/imgs/logoBatman.gif" alt="Logo carregando"></div>
   <div class="conteudoPrincipal" id="conteudoPrincipal">
     <!--header inicio-->
@@ -57,15 +57,19 @@
                      -->
             <div class="campo">
               <span>Nome:</span>
-              <input id="nome_input" type="text" placeholder="Seu nome" />
+              <input id="nome_input" type="text" placeholder="Seu nome" required/>
+            </div>
+            <div class="campo">
+              <span>Email:</span>
+              <input id="email_input" type="email" placeholder="Digite seu email" required/>
             </div>
             <div class="campo">
               <span>Senha:</span>
-              <input id="senha_input" type="password" placeholder="******" />
+              <input id="senha_input" type="password" placeholder="******" required/>
             </div>
             <div class="campo">
               <span>Confirmação da Senha:</span>
-              <input id="confirmacao_senha_input" type="password" placeholder="******" />
+              <input id="confirmacao_senha_input" type="password" placeholder="******" required/>
             </div>
             <button class="botao" onclick="cadastrar()">Cadastrar</button>
           </div>
@@ -113,15 +117,13 @@
   // Chama a função responsável por realizar o carregamento da página, após um pequeno atraso (1.5 segundos)
   setTimeout(carregamentoInicial, 1500);
 
-  // Array para armazenar empresas cadastradas para validação de código de ativação 
-  let listaEmpresasCadastradas = [];
-
   function cadastrar() {
     // aguardar();
 
     //Recupere o valor da nova input pelo nome do id
     // Agora vá para o método fetch logo abaixo
     var nomeVar = nome_input.value;
+    var emailVar = email_input.value;
     var senhaVar = senha_input.value;
     var confirmacaoSenhaVar = confirmacao_senha_input.value;
 
@@ -129,6 +131,7 @@
     if (
       nomeVar == "" ||
       senhaVar == "" ||
+      emailVar == "" ||
       confirmacaoSenhaVar == ""
     ) {
       cardErro.style.display = "block";
@@ -142,7 +145,9 @@
     }
     if (
       nomeVar.length < 1 ||
-      senhaVar.length >= 6 ||
+      emailVar.includes("@") == false ||
+      emailVar.includes(".com") == false ||
+      senhaVar.length > 6 ||
       confirmacaoSenhaVar != senhaVar
     ) {
       cardErro.style.display = "block";
@@ -166,6 +171,7 @@
         // crie um atributo que recebe o valor recuperado aqui
         // Agora vá para o arquivo routes/usuario.js
         nomeServer: nomeVar,
+        emailServer: emailVar,
         senhaServer: senhaVar
       }),
     })
@@ -194,26 +200,6 @@
       });
 
     return false;
-  }
-
-  // Listando empresas cadastradas 
-  function listar() {
-    fetch("/empresas/listar", {
-      method: "GET",
-    })
-      .then(function (resposta) {
-        resposta.json().then((empresas) => {
-          empresas.forEach((empresa) => {
-            listaEmpresasCadastradas.push(empresa);
-
-            console.log("listaEmpresasCadastradas")
-            console.log(listaEmpresasCadastradas[0].codigo_ativacao)
-          });
-        });
-      })
-      .catch(function (resposta) {
-        console.log(`#ERRO: ${resposta}`);
-      });
   }
 
   function sumirMensagem() {
