estilizando tela de charadas

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -51,22 +51,22 @@
         <div class="card card-cadastro">
           <h2>BatCadastro</h2>
           <div class="formulario">
-            <!--
-                         Para inserir mais um campo, copie uma das inputs abaixo.
-                         Assim que inserir vá para o script abaixo.
-                     -->
             <div class="campo">
+              <!--Campo para inserir o nome-->
               <span>Nome:</span>
               <input id="nome_input" type="text" placeholder="Seu nome" required/>
             </div>
+            <!-- campo para inserir o email -->
             <div class="campo">
               <span>Email:</span>
               <input id="email_input" type="email" placeholder="Digite seu email" required/>
             </div>
+            <!-- campo para inserir a senha -->
             <div class="campo">
               <span>Senha:</span>
               <input id="senha_input" type="password" placeholder="******" required/>
             </div>
+            <!-- campo para inserir a confirmação da senha -->
             <div class="campo">
               <span>Confirmação da Senha:</span>
               <input id="confirmacao_senha_input" type="password" placeholder="******" required/>
