--- a/public/charada.html
+++ b/public/charada.html
@@ -43,20 +43,19 @@
 
         <div class="charada">
             <div class="container">
-                <div class="card card-charada">
-                    <h2>Charada</h2>
+                <div class="card card_charada">
+                    <span>Bem-vindo ao nosso quiz de charadas!</span>
                     <div class="inicioJogo">
                         <p>Clique para começar o jogo...</p>
                     </div>
                 </div>
             </div>
-            <div class="footer">
-                <div class="container">
-                    <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
-                    <span class="version">v1.0.0</span>
-                </div>
+        </div>
+        <div class="footer">
+            <div class="container">
+                <h4>Feito com amor por aluno &hearts; SPTech &copy; 2023</h4>
+                <span class="version">v1.0.0</span>
             </div>
-
         </div>
 </body>
 
