--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>The Batman:  | Página Inicial</title>
+  <title>The Batman: | Página Inicial</title>
 
   <script src="./js/sessao.js"></script>
 
@@ -21,7 +21,7 @@
   <div class="conteudoPrincipal" id="conteudoPrincipal">
     <div class="header">
       <div class="container">
-        <div class="logo"><img src="assets/imgs/logoBatSite.png" alt=""></div>
+        <div class="logo"><img src="assets/imgs/logoBatSite.png"></div>
         <ul class="navbar">
           <li class="agora">
             <a href="#">Inicial</a>
@@ -57,7 +57,11 @@
             <img src="./assets/imgs/historiaIMG.gif">
           </div>
           <div class="texto">
-            <p>"The Batman" acompanha Bruce Wayne (Robert Pattinson) em seu segundo ano como o Homem-Morcego, aterrorizando criminosos em Gotham. Com apenas Alfred e o detetive Gordon como aliados, ele investiga uma série de crimes enigmáticos deixados pelo Charada. A trama revela uma rede de corrupção ligada à família Wayne, colocando em dúvida o legado de seu pai, Thomas. Batman precisa formar novas alianças para expor a verdade e combater a corrupção que domina a cidade.</p>
+            <p>"The Batman" acompanha Bruce Wayne (Robert Pattinson) em seu segundo ano como o Homem-Morcego,
+              aterrorizando criminosos em Gotham. Com apenas Alfred e o detetive Gordon como aliados, ele investiga uma
+              série de crimes enigmáticos deixados pelo Charada. A trama revela uma rede de corrupção ligada à família
+              Wayne, colocando em dúvida o legado de seu pai, Thomas. Batman precisa formar novas alianças para expor a
+              verdade e combater a corrupção que domina a cidade.</p>
           </div>
         </div>
       </div>
@@ -84,8 +88,8 @@
     carregamento.classList.add('sumir');
 
     setTimeout(() => {
-        carregamento.style.display = 'none';
-        conteudoPrincipal.classList.add('aparecer');
+      carregamento.style.display = 'none';
+      conteudoPrincipal.classList.add('aparecer');
     }, 1000); // 1 segundos de atraso
   }
 
